@@ -281,5 +281,19 @@
         <remarks>Returns the native <see cref="T:GLib.GType" /> value for <see cref="T:Gtk.TreePath" />.</remarks>
       </Docs>
     </Member>
+    <Member MemberName=".ctor">
+      <MemberSignature Language="C#" Value="public TreePath (int [] indices);" />
+      <MemberType>Constructor</MemberType>
+      <ReturnValue />
+      <Parameters>
+        <Parameter Name="indices" Type="System.Int32[]" />
+      </Parameters>
+      <Docs>
+        <summary>Creates a path for a set of indices.</summary>
+        <param name="indices">a <see cref="T:System.Int32" /></param>
+        <returns>a <see cref="T:Gtk.TreePath" /></returns>
+        <remarks />
+      </Docs>
+    </Member>
   </Members>
 </Type>
